Bug 497504 - Moving the panel from vertical to horizontal position (and vice versa) places the panel settings in the incorrect position and it moves when the panel height is changed
Summary: Moving the panel from vertical to horizontal position (and vice versa) places...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Panel (other bugs)
Version First Reported In: 6.2.4
Platform: Arch Linux Linux
: NOR minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-12-15 13:34 UTC by Filip
Modified: 2025-02-24 19:13 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
showcase 1 (1.76 MB, video/mp4)
2024-12-15 13:34 UTC, Filip
Details
showcase 2 (1.72 MB, video/mp4)
2024-12-15 13:34 UTC, Filip
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Filip 2024-12-15 13:34:04 UTC
SUMMARY
Moving the panel from vertical to horizontal position (and vice versa) places the panel settings in the incorrect position and it moves when panel height is changed

STEPS TO REPRODUCE
1. Set the panel to the bottom
2. Open Edit Mode and move panel to vertical position (left or right) -> Panel Settings displayed on top of the screen
3. Change the panel height --> Panel moves to the center (should've been in the center from step 2 I believe) -> DEFECT

OBSERVED RESULT
Panel settings is displayed in the incorrect position and moves to the correct one when the panel height is changed
Horizontal -> vertical: Displayed at the top and moves to the center
Vertical -> horizontal: Displayed on the left and moved to the right

EXPECTED RESULT
Panel settings displays in the correct position 

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.2.4
KDE Frameworks Version: 6.9.0
Qt Version: 6.8.1
Kernel Version: 6.12.4-arch1-1 (64-bit)
Graphics Platform: Wayland

ADDITIONAL INFORMATION
I suggested a change some time ago and it was rejected because it wasn't possible to do it, but I also suggested a new design which I believe was missed so I would try to remind you once more. Link: https://invent.kde.org/teams/vdg/issues/-/issues/74#note_1074317
Comment 1 Filip 2024-12-15 13:34:27 UTC
Created attachment 176644 [details]
showcase 1
Comment 2 Filip 2024-12-15 13:34:37 UTC
Created attachment 176645 [details]
showcase 2
Comment 3 Nate Graham 2024-12-16 19:18:51 UTC
Can reproduce.
Comment 4 Bug Janitor Service 2025-02-21 17:51:42 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5242
Comment 5 Niccolò Venerandi 2025-02-24 19:13:25 UTC
Git commit 6c9cb90979ad52168ab868b89ba549cfd9b0acee by Niccolò Venerandi.
Committed on 24/02/2025 at 19:12.
Pushed by niccolove into branch 'master'.

Make panel config follow panel when it changes screen border

Previously the new visualParent would be set too soon upon
panel changing border, meaning that the config window would
follow the previous position of the visualParent and not the
new one. Now the panel waits for its content to react to the
resize before setting the new visualParent.

M  +21   -10   shell/panelview.cpp
M  +1    -0    shell/panelview.h

https://invent.kde.org/plasma/plasma-workspace/-/commit/6c9cb90979ad52168ab868b89ba549cfd9b0acee