Make panel config follow panel when it changes screen border

Previously the new visualParent would be set too soon upon
panel changing border, meaning that the config window would
follow the previous position of the visualParent and not the
new one. Now the panel waits for its content to react to the
resize before setting the new visualParent.

BUG:497504