shell/panelview.h
@@ -337,6 +337,7 @@ private:
     QPointF positionAdjustedForContainment(const QPointF &point) const;
     bool edgeActivated() const;
     bool canSetStrut() const;
+    void positionConfigView();
 
     int m_offset;
     int m_maxLength;
